--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <div class="container">
       <h1>Welcome to Maro's Store</h1>
       <p>Discover amazing products and deals below!</p>
+      <div class="pop-text">
+        AMAZING DEALS!
+      </div>
     </div>
   </header>
 
@@ -89,7 +92,7 @@
   <!-- Footer -->
   <footer class="footer bg-dark text-white text-center py-4">
     <div class="container">
-      <p>© 2024 Affiliate Store. All rights reserved.</p>
+      <p>© 2024 DM Technonogies. All rights reserved.</p>
     </div>
   </footer>
 
