--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
           <a class="nav-link" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Products</a>
+          <a class="nav-link" href="products.html">Products</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
     </div>
@@ -63,7 +63,7 @@
         <!-- Product 2 -->
         <div class="col-md-4">
           <div class="card">
-            <img class="card-img-top" src="https://www.apple.com/newsroom/images/product/watch/standard/Apple_watch-series7_lp_09142021.jpg.og.jpg?202408200909" alt="Product 2">
+            <img class="card-img-top" src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/s10-case-unselect-gallery-1-202409_FMT_WHH?wid=752&hei=720&fmt=p-jpg&qlt=80&.v=1724620929305" alt="Product 2">
             <div class="card-body">
               <h5 class="card-title">APPLE WATCH</h5>
               <p class="card-text">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -89,12 +89,78 @@
     </div>
   </section>
 
+  <div class="deals2">
+    <div class="pop-text">
+      MORE AMAZING DEALS!
+    </div>
+    <p class="p2">Welcome to our exclusive deals section! We’re excited<br>
+       to bring you unbeatable offers and discounts on our top products.<br>
+        Whether you're looking for [mention specific categories or types<br>
+         of products], we’ve got something special just for you.</p>
+  </div>
+
+  
+
+  <!-- section 2 -->
+
+
+
+  <!-- Products Section -->
+  <section class="products py-5">
+    <div class="container">
+      <div class="row">
+        <!-- Product 1 -->
+        <div class="col-md-4">
+          <div class="card">
+            <img class="card-img-top" src="https://cdn.britannica.com/09/241709-050-149181B1/apple-iphone-11-2019.jpg" alt="Product 1">
+            <div class="card-body">
+              <h5 class="card-title">iPHONE 15</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <h4 class="price">$100</h4>
+              <a href="#" class="btn btn-primary" target="_blank">Buy Now</a>
+            </div>
+          </div>
+        </div>
+
+
+         <!-- Product 2 -->
+         <div class="col-md-4">
+          <div class="card">
+            <img class="card-img-top" src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/s10-case-unselect-gallery-1-202409_FMT_WHH?wid=752&hei=720&fmt=p-jpg&qlt=80&.v=1724620929305" alt="Product 2">
+            <div class="card-body">
+              <h5 class="card-title">APPLE WATCH</h5>
+              <p class="card-text">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h4 class="price">$100</h4>
+              <a href="#" class="btn btn-primary" target="_blank">Buy Now</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Product 3 -->
+        <div class="col-md-4">
+          <div class="card">
+            <img class="card-img-top" src="https://i.pcmag.com/imagery/reviews/005x4wlhEjDj4CRKQQuVVet-10.fit_scale.size_760x427.v1569472269.jpg" alt="Product 3">
+            <div class="card-body">
+              <h5 class="card-title">MAC BOOK</h5>
+              <p class="card-text">Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+              <h4 class="price">$100</h4>
+              <a href="#" class="btn btn-primary" target="_blank">Buy Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  
+
   <!-- Footer -->
   <footer class="footer bg-dark text-white text-center py-4">
     <div class="container">
       <p>© 2024 DM Technonogies. All rights reserved.</p>
     </div>
   </footer>
+  <script src="./script.js"></script>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
