--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="products.html">Products</a>
+          <!-- <a class="nav-link" href="products.html">Products</a> -->
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
