--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
   <!-- Footer -->
   <footer class="bg-dark text-light text-center p-3 mt-5">
-    <p>© 2024 Affiliate Website. All Rights Reserved.</p>
+    <p>© 2024 DM Technologies. All Rights Reserved.</p>
   </footer>
 
   <!-- Bootstrap JS -->
