--- a/index.html
+++ b/index.html
@@ -33,6 +33,40 @@
     </div>
   </nav>
 
+
+
+  <div class="promo-container">
+    <div class="promo-text">
+      <h1>Shop Smarter,<br>Live Better<br><span>EXPLORE</span><br>Our Exclusive Deals Today!</h1>
+      <p>
+        Discover the future of online shopping with Marostores! We offer a wide range of quality products – from 
+        fashion, electronics, and home essentials to beauty and personal care – all at unbeatable prices.
+      </p>
+    </div>
+    <div class="promo-image">
+      <img src="./img/pug.png" alt="Phone displaying product" />
+    </div>
+  </div>
+  
+
+
+  
+  
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   <!-- Product Section -->
   <section class="container mt-5">
     <div class="headertext">
