--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
     <div class="contact-container">
         <li class="nav-item">
-            <a class="nav-link" href="index.html">Click to go back to home page</a>
+            <a class="nav-link" href="index.html">BACK TO HOME</a>
           </li>
         <div class="contact-card">
             <h1>Contact Us</h1>
