--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Affiliate Products</title>
+  <title>Maro Stores</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
@@ -23,7 +23,7 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <!-- <a class="nav-link" href="#">Products</a> -->
+            <a class="nav-link" href="products.html">Products</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
@@ -32,8 +32,6 @@
       </div>
     </div>
   </nav>
-
-
 
   <div class="promo-container">
     <div class="promo-text">
@@ -48,24 +46,6 @@
     </div>
   </div>
   
-
-
-  
-  
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
 
   <!-- Product Section -->
   <section class="container mt-5">
@@ -129,6 +109,7 @@
       <!-- Add more product cards as needed -->
     </div>
   </section>
+  
 
   <!-- Footer -->
   <footer class="bg-dark text-light text-center p-3 mt-5">
