--- a/products.html
+++ b/products.html
@@ -3,80 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Reviews</title>
-    <!-- Bootstrap CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .product-card {
-            border: 1px solid #ddd;
-            padding: 15px;
-            margin: 20px 0;
-            border-radius: 10px;
-        }
-        .product-image {
-            max-width: 100%;
-            height: auto;
-        }
-        .product-description {
-            display: none;
-        }
-        footer {
-            background-color: #343a40;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-        }
-    </style>
+    <title>Product Review Page</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- External CSS -->
+    <link rel="stylesheet" href="products.css">
 </head>
 <body>
-    <!-- Container -->
-    <div class="container">
-        <h1 class="text-center my-4">Affiliate Product Reviews</h1>
 
-        <!-- Product Card -->
-        <div class="product-card row">
-            <div class="col-md-4">
-                <img src="https://via.placeholder.com/300" alt="Product Image" class="product-image">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">MARO<span>STORES</span></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Products</a>
+                </li>
+                <li class="nav-item">
+                    <!-- <a class="nav-link" href="#">About</a> -->
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- Product Review Section -->
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-6">
+                <h2>Product Name</h2>
+                <div class="card mb-4">
+                    <img src="https://www.maplestore.in/cdn/shop/files/iPhone_15_Pro_Blue_Titanium_PDP_Image_Position-1__en-IN_b566cedb-ec09-4afd-9899-b726c06d3add.jpg?v=1701825864500" class="card-img-top" alt="Product Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Product Title</h5>
+                        <p class="card-text">This is a brief description of the product. It should include key features, benefits, and why customers should consider purchasing it.</p>
+                        <a href="#" class="btn btn-primary">Buy Now</a>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-8">
-                <h2>Product Title</h2>
-                <p class="product-summary">This is a short description of the product...</p>
-                <p class="product-description">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac massa ante. Quisque
-                    tincidunt, libero et porttitor bibendum, dui nisl gravida sapien, at interdum felis orci
-                    vitae dui. Nullam luctus nisl a mauris bibendum, vel tincidunt ligula hendrerit.
-                </p>
-                <button class="btn btn-primary read-more-btn">Read More</button>
+            <div class="col-md-6">
+                <h3>Reviews</h3>
+                <div class="review" id="reviewSection">
+                    <!-- Reviews will be appended here -->
+                </div>
+                <div class="form-group">
+                    <textarea class="form-control" id="reviewInput" rows="3" placeholder="Write your review..."></textarea>
+                </div>
+                <button class="btn btn-success" id="submitReview">Submit Review</button>
             </div>
         </div>
-
-        <!-- You can add more product cards similarly -->
-
     </div>
 
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2024 Affiliate Product Reviews | Powered by Your Company</p>
-    </footer>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- JavaScript -->
-    <script>
-        // Read More Button Functionality
-        document.querySelectorAll('.read-more-btn').forEach(function(button) {
-            button.addEventListener('click', function() {
-                const productDesc = this.previousElementSibling;
-                if (productDesc.style.display === "none" || productDesc.style.display === "") {
-                    productDesc.style.display = "block";
-                    this.innerText = "Read Less";
-                } else {
-                    productDesc.style.display = "none";
-                    this.innerText = "Read More";
-                }
-            });
-        });
-    </script>
+    <!-- Bootstrap JS and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!-- External JS -->
+    <script src="products.js"></script>
 </body>
 </html>
