--- a/products.html
+++ b/products.html
@@ -1,72 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Review Page</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <!-- External CSS -->
-    <link rel="stylesheet" href="products.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Affiliate Product Review Website</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="products.css">
 </head>
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">MARO<span>STORES</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Products</a>
-                </li>
-                <li class="nav-item">
-                    <!-- <a class="nav-link" href="#">About</a> -->
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <!-- Product Review Section -->
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-md-6">
-                <h2>Product Name</h2>
-                <div class="card mb-4">
-                    <img src="https://www.maplestore.in/cdn/shop/files/iPhone_15_Pro_Blue_Titanium_PDP_Image_Position-1__en-IN_b566cedb-ec09-4afd-9899-b726c06d3add.jpg?v=1701825864500" class="card-img-top" alt="Product Image">
-                    <div class="card-body">
-                        <h5 class="card-title">Product Title</h5>
-                        <p class="card-text">This is a brief description of the product. It should include key features, benefits, and why customers should consider purchasing it.</p>
-                        <a href="#" class="btn btn-primary">Buy Now</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <h3>Reviews</h3>
-                <div class="review" id="reviewSection">
-                    <!-- Reviews will be appended here -->
-                </div>
-                <div class="form-group">
-                    <textarea class="form-control" id="reviewInput" rows="3" placeholder="Write your review..."></textarea>
-                </div>
-                <button class="btn btn-success" id="submitReview">Submit Review</button>
-            </div>
-        </div>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="#">MARO<span>STORES</span></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <!-- <li class="nav-item"><a class="nav-link" href="#">About</a></li> -->
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        </ul>
+      </div>
     </div>
+  </nav>
 
-    <!-- Bootstrap JS and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <!-- External JS -->
-    <script src="products.js"></script>
+  <!-- Product Section one  -->
+  <div class="container mt-5">
+    <div class="product">
+      <img src="https://m.media-amazon.com/images/I/81soN3bwVFL._AC_SX679_.jpg" alt="Product Image" class="img-fluid">
+      <h2 class="product-name mt-3">LG UltraGear</h2>
+      <p class="product-description">
+        LG UltraGear QHD 34-Inch Curved Gaming Monitor 34GP63A-B, VA with HDR 10 Compatibility and AMD FreeSync Premium, 160Hz, Black
+        <span class="more-text d-none"> Great for gaming, this ultra-wide QHD (3440 x 1440, 21:9 aspect ratio) curved monitor immerses you in the action and increases your field of view, allowing you to see more on-screen.Specific uses for product - Gaming
+            A high native 160Hz refresh rate with 1-millisecond Motion Blur Reduction (MBR) keeps you firmly in the action while reducing blur and ghosting, helping you to respond to opponents quickly
+            With HDR10 support and color performance with 99% coverage of the sRGB spectrum, you'll see the game as the developers intend, with accurate and vivid color
+            AMD FreeSync Premium manages refresh rate, reducing screen tearing, flicker, and stuttering for an effortlessly smooth gaming experience with supported video cards such as the AMD Radeon series
+            Dynamic Action Sync helps reduce input lag to help you respond to on-screen action quickly. Black Stabilizer dynamically brightens dark scenes to help you find enemies in the dark. Enhance your accuracy in firefights with the Crosshair feature</span>
+      </p>
+
+      <!-- Buttons -->
+      <div class="button-group">
+        <button class="btn btn-primary read-more">Read More</button>
+        <a href="#" class="btn btn-success buy-now" target="_blank">Buy Now</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Product Section two  -->
+
+  <div class="container mt-5">
+    <div class="product">
+      <img src="https://m.media-amazon.com/images/I/61INtCQzv2L._AC_SX679_.jpg" alt="Product Image" class="img-fluid">
+      <h2 class="product-name mt-3">Skytech Gaming Nebula</h2>
+      <p class="product-description">
+        Gaming PC Desktop – Intel Core i5 13400F 2.5 GHz, NVIDIA RTX 4060, 1TB NVME SSD, 16GB DDR4 RAM 3200, 600W Gold PSU, 11AC Wi-Fi, Windows 11 Home 64-bit,Black
+       
+        <span class="more-text d-none">INTEL Core i5 13400F 2.5GHz (4.6GHz Max Boost) CPU Processor | 1TB NVME SSD – Up to 30x Faster Than Traditional HDD
+            NVIDIA Geforce RTX 4060 8GB GDDR6X Graphics Card (Brand may vary) | 16GB DDR4 RAM 3200 Gaming Memory with Heat Spreader | Windows 11 Home 64-bit
+            802.11 AC | No Bloatware | Graphic output options include 1 x HDMI, and 1 x Display Port Guaranteed, Additional Ports may vary | USB Ports Including 2.0, 3.0, and 3.2 Gen1 Ports | HD Audio and Mic | Free Gaming Keyboard and Mouse
+            4 RGB Fans for Maximum Air Flow | Skytech Nebula Black Edition with Front Mesh | 1 Year Warranty on Parts and Labor | Lifetime Free Technical Support | Assembled in the USA
+            This powerful gaming PC is capable of running all your favorite games such as Call of Duty Warzone, Fortnite, Escape from Tarkov, Grand Theft Auto V, Valorant, World of Warcraft, League of Legends, Apex Legends, Roblox, PLAYERUNKNOWN's Battlegrounds, Overwatch 2, Counter-Strike 2, Battlefield V, New World, Minecraft, Elden Ring, Rocket League, Baldur's Gate 3, Dota 2, HELLDIVERS 2, Monster Hunter, Palworld, Terraria, Rainbow Six Siege, Dragon's Dogma 2, and more at Ultra settings, detailed 1080p Full HD resolution, and smooth 60 plus FPS gameplay.
+            › See more product details
+               Report an issue with this product or seller </span>
+      </p>
+
+      <!-- Buttons -->
+      <div class="button-group">
+        <button class="btn btn-primary read-more">Read More</button>
+        <a href="#" class="btn btn-success buy-now" target="_blank">Buy Now</a>
+      </div>
+    </div>
+  </div>
+<!-- Product Section three  -->
+
+  <div class="container mt-5">
+    <div class="product">
+      <img src="https://m.media-amazon.com/images/I/6108C2DZE9L.__AC_SX300_SY300_QL70_FMwebp_.jpg" alt="Product Image" class="img-fluid">
+      <h2 class="product-name mt-3">iPHONE 16</h2>
+      <p class="product-description">
+        ProMax 5G Unlocked Smartphone,8GB+256GB with128GB Memory Card cell phone Android 13, 6.8"HD Screen Unlocked Cell Phone, 7000mAh, 48MP+108MP Dual Camera/Fingerprint Lock/Face(Blue Titanium)
+        <span class="more-text d-none"> Snapdragon8 Gen2 CPU + 128GB Expandable TF Card】unlocked Android cell phone powerful by Snapdragon 8CPU+ 5G Octa-Core Processor, Up to 8GB RAM and 256GB ROM Supports expandable storage up to 128GB, storage card to easily store your favorite music videos photograph it offers you a capacious room to keep all your favorite things
+            【48MP+108MP+6.8"HD Screen】108MP main camera and a 48MP front facing camera,Equipped with extra-large 6.8"HD Screen High Definition Storage of Pictures and Videos Recording of Good Life
+            【7000mAh Battery+Android 13】Large capacity and long battery life No need to recharge multiple times Enjoy long time use of your cell phone,Android 13 on board for a smoother experience
+            【Unlocked Smartphones & Multi-function NFC】 unlocked smartphones works with most major U.S. carriers. It is compatible with most GSM networks and CDMA networks. Both SIM slots are compatible with 5G/4G, and support 5G/4G in both slots simultaneously.
+            【Parts + Service】I15 ProMax 5G Phone present as a gift built in pen/screen protector/earphones/charger/128GB Memory Card, I wish you a happy life, if you have any questions in the process of experiencing the mobile phone, please feel free to contact us, we will solve the problem with you in time</span>
+      </p>
+
+      <!-- Buttons -->
+      <div class="button-group">
+        <button class="btn btn-primary read-more">Read More</button>
+        <a href="#" class="btn btn-success buy-now" target="_blank">Buy Now</a>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+  <!-- Footer -->
+  <footer class="bg-dark text-light text-center p-3 mt-5">
+    <p>© 2024 DM Technologies. All Rights Reserved.</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="products.js"></script>
 </body>
 </html>
