--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Contact Us</title>
+    <title>Maro Stores</title>
+    <link rel="icon" type="image/png" sizes="64x64" href="./img/tlogo.png">
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
