--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Maro Stores</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="icon" type="image/png" sizes="64x64" href="./img/tlogo.png">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
