--- a/products.html
+++ b/products.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Affiliate Product Review Website</title>
+  <title>Maro Stores</title>
+  <link rel="icon" type="image/png" sizes="64x64" href="./img/tlogo.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="products.css">
 </head>
