--- a/products.html
+++ b/products.html
@@ -11,7 +11,7 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-navbar">
     <div class="container">
       <a class="navbar-brand" href="#">MARO<span>STORES</span></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -20,25 +20,23 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <!-- <li class="nav-item"><a class="nav-link" href="#">About</a></li> -->
+          <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
+          <li class="nav-item"><a class="nav-link" href="products_review.html">Products Review</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Product Section one  -->
+  <!-- Product Section one -->
   <div class="container mt-5">
     <div class="product">
       <img src="https://m.media-amazon.com/images/I/81soN3bwVFL._AC_SX679_.jpg" alt="Product Image" class="img-fluid">
       <h2 class="product-name mt-3">LG UltraGear</h2>
       <p class="product-description">
         LG UltraGear QHD 34-Inch Curved Gaming Monitor 34GP63A-B, VA with HDR 10 Compatibility and AMD FreeSync Premium, 160Hz, Black
-        <span class="more-text d-none"> Great for gaming, this ultra-wide QHD (3440 x 1440, 21:9 aspect ratio) curved monitor immerses you in the action and increases your field of view, allowing you to see more on-screen.Specific uses for product - Gaming
-            A high native 160Hz refresh rate with 1-millisecond Motion Blur Reduction (MBR) keeps you firmly in the action while reducing blur and ghosting, helping you to respond to opponents quickly
-            With HDR10 support and color performance with 99% coverage of the sRGB spectrum, you'll see the game as the developers intend, with accurate and vivid color
-            AMD FreeSync Premium manages refresh rate, reducing screen tearing, flicker, and stuttering for an effortlessly smooth gaming experience with supported video cards such as the AMD Radeon series
-            Dynamic Action Sync helps reduce input lag to help you respond to on-screen action quickly. Black Stabilizer dynamically brightens dark scenes to help you find enemies in the dark. Enhance your accuracy in firefights with the Crosshair feature</span>
+        <span class="more-text d-none"> Great for gaming, this ultra-wide QHD (3440 x 1440, 21:9 aspect ratio) curved monitor immerses you in the action and increases your field of view, allowing you to see more on-screen. Specific uses for product - Gaming
+        A high native 160Hz refresh rate with 1-millisecond Motion Blur Reduction (MBR) keeps you firmly in the action while reducing blur and ghosting, helping you to respond to opponents quickly. With HDR10 support and color performance with 99% coverage of the sRGB spectrum, you'll see the game as the developers intend, with accurate and vivid color. AMD FreeSync Premium manages refresh rate, reducing screen tearing, flicker, and stuttering for an effortlessly smooth gaming experience with supported video cards such as the AMD Radeon series. Dynamic Action Sync helps reduce input lag to help you respond to on-screen action quickly. Black Stabilizer dynamically brightens dark scenes to help you find enemies in the dark. Enhance your accuracy in firefights with the Crosshair feature.</span>
       </p>
 
       <!-- Buttons -->
@@ -49,22 +47,14 @@
     </div>
   </div>
 
-  <!-- Product Section two  -->
-
+  <!-- Product Section two -->
   <div class="container mt-5">
     <div class="product">
       <img src="https://m.media-amazon.com/images/I/61INtCQzv2L._AC_SX679_.jpg" alt="Product Image" class="img-fluid">
       <h2 class="product-name mt-3">Skytech Gaming Nebula</h2>
       <p class="product-description">
-        Gaming PC Desktop – Intel Core i5 13400F 2.5 GHz, NVIDIA RTX 4060, 1TB NVME SSD, 16GB DDR4 RAM 3200, 600W Gold PSU, 11AC Wi-Fi, Windows 11 Home 64-bit,Black
-       
-        <span class="more-text d-none">INTEL Core i5 13400F 2.5GHz (4.6GHz Max Boost) CPU Processor | 1TB NVME SSD – Up to 30x Faster Than Traditional HDD
-            NVIDIA Geforce RTX 4060 8GB GDDR6X Graphics Card (Brand may vary) | 16GB DDR4 RAM 3200 Gaming Memory with Heat Spreader | Windows 11 Home 64-bit
-            802.11 AC | No Bloatware | Graphic output options include 1 x HDMI, and 1 x Display Port Guaranteed, Additional Ports may vary | USB Ports Including 2.0, 3.0, and 3.2 Gen1 Ports | HD Audio and Mic | Free Gaming Keyboard and Mouse
-            4 RGB Fans for Maximum Air Flow | Skytech Nebula Black Edition with Front Mesh | 1 Year Warranty on Parts and Labor | Lifetime Free Technical Support | Assembled in the USA
-            This powerful gaming PC is capable of running all your favorite games such as Call of Duty Warzone, Fortnite, Escape from Tarkov, Grand Theft Auto V, Valorant, World of Warcraft, League of Legends, Apex Legends, Roblox, PLAYERUNKNOWN's Battlegrounds, Overwatch 2, Counter-Strike 2, Battlefield V, New World, Minecraft, Elden Ring, Rocket League, Baldur's Gate 3, Dota 2, HELLDIVERS 2, Monster Hunter, Palworld, Terraria, Rainbow Six Siege, Dragon's Dogma 2, and more at Ultra settings, detailed 1080p Full HD resolution, and smooth 60 plus FPS gameplay.
-            › See more product details
-               Report an issue with this product or seller </span>
+        Gaming PC Desktop – Intel Core i5 13400F 2.5 GHz, NVIDIA RTX 4060, 1TB NVME SSD, 16GB DDR4 RAM 3200, 600W Gold PSU, 11AC Wi-Fi, Windows 11 Home 64-bit, Black
+        <span class="more-text d-none">INTEL Core i5 13400F 2.5GHz (4.6GHz Max Boost) CPU Processor | 1TB NVME SSD – Up to 30x Faster Than Traditional HDD. NVIDIA Geforce RTX 4060 8GB GDDR6X Graphics Card (Brand may vary) | 16GB DDR4 RAM 3200 Gaming Memory with Heat Spreader | Windows 11 Home 64-bit. 802.11 AC | No Bloatware | Graphic output options include 1 x HDMI, and 1 x Display Port Guaranteed, Additional Ports may vary | USB Ports Including 2.0, 3.0, and 3.2 Gen1 Ports | HD Audio and Mic | Free Gaming Keyboard and Mouse. 4 RGB Fans for Maximum Air Flow | Skytech Nebula Black Edition with Front Mesh | 1 Year Warranty on Parts and Labor | Lifetime Free Technical Support | Assembled in the USA.</span>
       </p>
 
       <!-- Buttons -->
@@ -74,19 +64,15 @@
       </div>
     </div>
   </div>
-<!-- Product Section three  -->
 
+  <!-- Product Section three -->
   <div class="container mt-5">
     <div class="product">
       <img src="https://m.media-amazon.com/images/I/6108C2DZE9L.__AC_SX300_SY300_QL70_FMwebp_.jpg" alt="Product Image" class="img-fluid">
       <h2 class="product-name mt-3">iPHONE 16</h2>
       <p class="product-description">
-        ProMax 5G Unlocked Smartphone,8GB+256GB with128GB Memory Card cell phone Android 13, 6.8"HD Screen Unlocked Cell Phone, 7000mAh, 48MP+108MP Dual Camera/Fingerprint Lock/Face(Blue Titanium)
-        <span class="more-text d-none"> Snapdragon8 Gen2 CPU + 128GB Expandable TF Card】unlocked Android cell phone powerful by Snapdragon 8CPU+ 5G Octa-Core Processor, Up to 8GB RAM and 256GB ROM Supports expandable storage up to 128GB, storage card to easily store your favorite music videos photograph it offers you a capacious room to keep all your favorite things
-            【48MP+108MP+6.8"HD Screen】108MP main camera and a 48MP front facing camera,Equipped with extra-large 6.8"HD Screen High Definition Storage of Pictures and Videos Recording of Good Life
-            【7000mAh Battery+Android 13】Large capacity and long battery life No need to recharge multiple times Enjoy long time use of your cell phone,Android 13 on board for a smoother experience
-            【Unlocked Smartphones & Multi-function NFC】 unlocked smartphones works with most major U.S. carriers. It is compatible with most GSM networks and CDMA networks. Both SIM slots are compatible with 5G/4G, and support 5G/4G in both slots simultaneously.
-            【Parts + Service】I15 ProMax 5G Phone present as a gift built in pen/screen protector/earphones/charger/128GB Memory Card, I wish you a happy life, if you have any questions in the process of experiencing the mobile phone, please feel free to contact us, we will solve the problem with you in time</span>
+        ProMax 5G Unlocked Smartphone, 8GB+256GB with 128GB Memory Card cell phone Android 13, 6.8"HD Screen, 7000mAh, 48MP+108MP Dual Camera/Fingerprint Lock/Face (Blue Titanium)
+        <span class="more-text d-none">Snapdragon 8 Gen2 CPU + 128GB Expandable TF Card】unlocked Android cell phone powerful by Snapdragon 8CPU + 5G Octa-Core Processor, Up to 8GB RAM and 256GB ROM. Supports expandable storage up to 128GB. Android 13 on board for a smoother experience.</span>
       </p>
 
       <!-- Buttons -->
@@ -98,10 +84,8 @@
   </div>
 
 
-
-
-
-
+   <!-- Scroll to Top Button -->
+   <button id="scrollToTopBtn" onclick="scrollToTop()">↑</button>
 
 
   <!-- Footer -->
