--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">MARO<span>STORES</span></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,8 +27,12 @@
             <a class="nav-link" href="products.html">Products</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="products_review.html">Products Review</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
+          
         </ul>
       </div>
     </div>
@@ -37,8 +41,7 @@
   <div class="promo-container">
     <div class="promo-text">
       <h1>Shop Smarter,<br>Live Better<br><span>EXPLORE</span><br>Our Exclusive Deals Today!</h1>
-      <p>
-        Discover the future of online shopping with Marostores! We offer a wide range of quality products – from 
+      <p>Discover the future of online shopping with Marostores! We offer a wide range of quality products – from 
         fashion, electronics, and home essentials to beauty and personal care – all at unbeatable prices.
       </p>
     </div>
@@ -46,17 +49,15 @@
       <img src="./img/pug.png" alt="Phone displaying product" />
     </div>
   </div>
-  
 
   <!-- Product Section -->
   <section class="container mt-5">
     <div class="headertext">
       <h1 class="h1">Welcome to Maro's Stores</h1>
       <p class="ptext">Discover amazing products and deals below!</p>
-        <h1 class="popup-text">AMAZING DEALS!</h1>
+      <h1 class="popup-text">AMAZING DEALS!</h1>
     </div>
 
-    </div>
     <div class="row">
       <!-- Product Card 1 -->
       <div class="col-md-4">
@@ -90,7 +91,7 @@
         </div>
       </div>
 
-
+      <!-- Product Card 3 -->
       <div class="col-md-4">
         <div class="card">
           <div class="card-img-container">
@@ -105,12 +106,11 @@
           </div>
         </div>
       </div>
-
-
-      <!-- Add more product cards as needed -->
     </div>
   </section>
-  
+
+  <!-- Scroll to Top Button -->
+  <button id="scrollToTopBtn" onclick="scrollToTop()">↑</button>
 
   <!-- Footer -->
   <footer class="bg-dark text-light text-center p-3 mt-5">
@@ -120,5 +120,6 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
+
 </body>
 </html>
