--- a/contact.html
+++ b/contact.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Maro Stores</title>
-    <link rel="icon" type="image/png" sizes="64x64" href="./img/tlogo.png">
-    <link rel="stylesheet" href="contact.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Maro Stores</title>
+  <link rel="stylesheet" href="contact.css">
+  <link rel="icon" type="image/png" sizes="64x64" href="./img/tlogo.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
+  <div class="contact-container">
+    <li class="nav-item">
+        <a class="nav-link" href="index.html">BACK TO HOME</a>
+      </li>
+    <h1>Contact Us</h1>
+    <p>Feel free to reach out to us via email or WhatsApp.</p>
 
-    <div class="contact-container">
-        <li class="nav-item">
-            <a class="nav-link" href="index.html">BACK TO HOME</a>
-          </li>
-        <div class="contact-card">
-            <h1>Contact Us</h1>
-            <p>If you have any questions, feel free to reach us via WhatsApp or Email.</p>
-            <div class="contact-info">
-                <a href="https://wa.me/2347066290939" target="_blank" class="contact-button">WhatsApp</a>
-                <a href="mailto:maroadonis@yahhoo.com.com" class="contact-button">Email</a>
-            </div>
-        </div>
+    <div class="contact-item">
+      <i class="fas fa-envelope"></i>
+      <a href="mailto:maroadonis@yahoo.com">Send us email</a>
     </div>
 
-   
+    <div class="contact-item">
+      <i class="fab fa-whatsapp"></i>
+      <a href="https://wa.me/2347066290939" target="_blank">Chat with us on WhatsApp</a>
+    </div>
+  </div>
 </body>
 </html>
