--- a/products_review.html
+++ b/products_review.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="icon" type="image/png" sizes="64x64" href="./img/tlogo.png">
     <link rel="stylesheet" href="products_review.css"> 
     <title>Maro Stores</title>
 </head>
