--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <title>Maro Stores</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <link rel="icon" type="image/png" sizes="64x64" href="./img/tlogo.png">
+  <!-- font awesome cdn -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -27,7 +31,7 @@
             <a class="nav-link" href="products.html">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="products_review.html">Products Review</a>
+            <a class="nav-link" href="products_review.html">Products review</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
@@ -109,8 +113,11 @@
     </div>
   </section>
 
-  <!-- Scroll to Top Button -->
-  <button id="scrollToTopBtn" onclick="scrollToTop()">↑</button>
+   <!-- Scroll to Top Button -->
+   <button id="scrollTopBtn">
+    <i class="fa-solid fa-arrow-up"></i>
+  </button>
+
 
   <!-- Footer -->
   <footer class="bg-dark text-light text-center p-3 mt-5">
@@ -119,6 +126,8 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- font awesome js -->
+  <script src="https://kit.fontawesome.com/492627f3ac.js" crossorigin="anonymous"></script>
   <script src="script.js"></script>
 
 </body>
