--- a/products.html
+++ b/products.html
@@ -7,6 +7,10 @@
   <link rel="icon" type="image/png" sizes="64x64" href="./img/tlogo.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="products.css">
+
+  <!-- font awesome cdn -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  
 </head>
 <body>
 
@@ -21,7 +25,7 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
-          <li class="nav-item"><a class="nav-link" href="products_review.html">Products Review</a></li>
+          <li class="nav-item"><a class="nav-link" href="products_review.html">Products review</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
         </ul>
       </div>
@@ -85,7 +89,9 @@
 
 
    <!-- Scroll to Top Button -->
-   <button id="scrollToTopBtn" onclick="scrollToTop()">↑</button>
+   <button id="scrollTopBtn">
+    <i class="fa-solid fa-arrow-up"></i>
+  </button>
 
 
   <!-- Footer -->
