--- a/products_review.html
+++ b/products_review.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="icon" type="image/png" sizes="64x64" href="./img/tlogo.png">
     <link rel="stylesheet" href="products_review.css"> 
+
+    <!-- font awesome cdn -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  
     <title>Maro Stores</title>
 </head>
 <body>
@@ -25,7 +29,7 @@
                 <a class="nav-link" href="products.html">Products</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="products_review.html">Products Review</a>
+                <a class="nav-link" href="products_review.html">Products review</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
@@ -98,8 +102,10 @@
     <hr class="product-hr">
 </div>
 
-<!-- Scroll to Top Button -->
-<button id="scrollToTopBtn" onclick="scrollToTop()">↑</button>
+ <!-- Scroll to Top Button -->
+ <button id="scrollTopBtn">
+    <i class="fa-solid fa-arrow-up"></i>
+  </button>
 
 <!-- Footer -->
 <footer class="bg-dark text-light text-center p-3 mt-5">
